fix: collapse子项右侧图标展示不统一时，保持内容宽度一致

--- a/src/collapse-item/index.less
+++ b/src/collapse-item/index.less
@@ -11,6 +11,12 @@
   }
 
   &__title {
+    &--hideLink {
+      .van-cell__right-icon {
+        opacity: 0;
+      }
+    }
+
     .van-cell__right-icon::before {
       // using translateZ to fix safari rendering issues
       // see: https://github.com/youzan/vant/issues/8608
